// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration blocks Can return blocks by number 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "bf13d9a80ad99a4f34edb8a3262dd8120e29bbe182732cd3b00bf3d1bb7c2380",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration blocks are linked to their predecessor, and the chain can be traversed 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "bf13d9a80ad99a4f34edb8a3262dd8120e29bbe182732cd3b00bf3d1bb7c2380",
        "previousBlock": Object {
          "number": 29021,
          "previousBlock": Object {
            "number": 29020,
            "previousBlock": Object {
              "number": 29019,
            },
          },
        },
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration blocks throws an error if query requests more than 100 blocks 1`] = `[GraphQLError: 110 exceeds the maximum allowed value of 100. Use the offset to paginate through a larger result set]`;

exports[`Integration cardano Returns the block height 1`] = `31070`;

exports[`Integration epochs Returns epoch details by number 1`] = `
Object {
  "data": Object {
    "epochs": Array [
      Object {
        "lastBlockTime": "2017-10-01T02:25:51",
        "number": 1,
        "output": "17282903106017760",
        "startedAt": "2017-09-28T21:45:51",
        "transactionsCount": "5344",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration epochs Returns epoch details by number range 1`] = `
Object {
  "data": Object {
    "epochs": Array [
      Object {
        "lastBlockTime": "2017-10-01T02:25:51",
        "number": 1,
        "output": "17282903106017760",
        "startedAt": "2017-09-28T21:45:51",
        "transactionsCount": "5344",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration transactions Returns transactions by IDs 1`] = `
Object {
  "data": Object {
    "transactions": Array [
      Object {
        "block": Object {
          "number": 29021,
        },
        "fee": "171246",
        "id": "05ad8b467095e0886713a38231ab9fe84e4031a433a9400ebf70ec9415e20102",
        "inputs": Array [
          Object {
            "address": "DdzFFzCqrht5ExAdoZVExXoZTpoMYGKxva3thvvvHapsLZQzSX3kCqwgqi5NSM2oUtHYYDqsSnvSGbqkarB6cSgDZohUhLWZ9KFdDWsa",
            "value": "4924799649906",
          },
        ],
        "outputs": Array [
          Object {
            "address": "DdzFFzCqrhsxVv8Sjuj35Zkw42T9WjwXa6DasrNknm5M3bPVDnWJWwhX5NymoZncUArTfFYZ9sYGaA9htKSNYoK5Vkzx2vUtunAFt3eE",
            "value": "4824799478660",
          },
          Object {
            "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
            "value": "100000000000",
          },
        ],
        "totalOutput": "4924799478660",
      },
      Object {
        "block": Object {
          "number": 29021,
        },
        "fee": "171070",
        "id": "e680432562b3b71fe44ca4eb8e29cb181d3a0858b3e2a643a55f7513d901bcae",
        "inputs": Array [
          Object {
            "address": "DdzFFzCqrhsggyaAMAUTjGtjBr1CTp8tTcHYWbqtoyQBZcaYHM16rjbUDawTwoVaEPawAMPLJmpJVXHBNxZnTgmQzqAcNDe6XvMe5BkB",
            "value": "768403000000",
          },
        ],
        "outputs": Array [
          Object {
            "address": "DdzFFzCqrhsuz652nVpjktdtiV44uWJLHv83m61S33gzfB4TBx7SKp3DgM18fBJznMrbUdsEFEvXW4LYqVKFE9fjMgVhmJP2LBhUvEe8",
            "value": "768401828930",
          },
          Object {
            "address": "DdzFFzCqrhsgrGt7zHydkE4cKxjB7SgsdnMPUFxYEwBu1u4sGobxZL5Xo3eDycCrtSYAUyw9aAsZZxFpTdgur6MwYDYMwAZ4xNGKRD3o",
            "value": "1000000",
          },
        ],
        "totalOutput": "768402828930",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration transactions utxoSet Can be scoped by address 1`] = `
Object {
  "data": Object {
    "utxoSet": Array [
      Object {
        "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
        "value": "100000000000",
      },
      Object {
        "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
        "value": "150000000000",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration transactions utxoSet Can be scoped by list of addresses 1`] = `
Object {
  "data": Object {
    "utxoSet": Array [
      Object {
        "address": "Ae2tdPwUPEZGvXJ3ebp4LDgBhbxekAH2oKZgfahKq896fehv8oCJxmGJgLt",
        "value": "1153846000000",
      },
      Object {
        "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
        "value": "100000000000",
      },
      Object {
        "address": "DdzFFzCqrhskotfhVwhLvNFaVGpA6C4yR9DXe56oEL4Ewmze51f1uQsc1cQb8qUyqgzjUPBgFZiVbuQu7BaXrQkouyvzjYjLqfJpKG5s",
        "value": "150000000000",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
